--- a/References/References.bib
+++ b/References/References.bib
@@ -1983,10 +1983,12 @@ isbn="978-3-540-48184-3"
   journal = {Journal of Cryptology}
 }
 
-@unpublished{SSH+21,
-author = {Lara Stroh and Robert Stárek and Nikola Horová and Ittoop V. Puthoor and  Miloslav Du\v{s}ek and Erika Andersson},
-title = {{A non-interactive XOR quantum oblivious transfer protocol}},
-addendum = {Poster presented at QCrypt 2021, Amsterdam, The Netherlands}
+@article{SSH+21,
+      title={Non-interactive XOR quantum oblivious transfer: optimal protocols and their experimental implementations}, 
+      author={Lara Stroh and Nikola Horov\'a and Robert St\'arek and Ittoop V. Puthoor and Michal Mičuda and Miloslav Dušek and Erika Andersson},
+      year={2022},
+      journal={arXiv},
+      volume={2209.11300}
 }
 
 @article{KST22,
@@ -2600,34 +2602,6 @@ URL = {
 eprint = { 
         https://doi.org/10.1142/S0219749910006502
     }
-}
-
-@article{Zhongetal2015,
-  doi = {10.1088/1367-2630/17/2/022002},
-  url = {https://doi.org/10.1088/1367-2630/17/2/022002},
-  year = {2015},
-  publisher = {{IOP} Publishing},
-  volume = {17},
-  number = {2},
-  pages = {022002},
-  author = {Tian Zhong and Hongchao Zhou and Robert D Horansky and Catherine Lee and Varun B Verma and Adriana E Lita and Alessandro Restelli and Joshua C Bienfang and Richard P Mirin and Thomas Gerrits and Sae Woo Nam and Francesco Marsili and Matthew D Shaw and Zheshen Zhang and Ligong Wang and Dirk Englund and Gregory W Wornell and Jeffrey H Shapiro and Franco N C Wong},
-  title = {Photon-efficient quantum key distribution using time{\textendash}energy entanglement with high-dimensional encoding},
-  journal = {New Journal of Physics}
-}
-
-@article{BHVBFHM18,
-author = {Fr\'{e}d\'{e}ric Bouchard and Natalia Herrera Valencia and Florian Brandt and Robert Fickler and Marcus Huber and Mehul Malik},
-journal = {Opt. Express},
-keywords = {Light beams; Phase modulation; Phase plates; Photon polarization; Quantum communications; Quantum information processing},
-number = {24},
-pages = {31925--31941},
-publisher = {OSA},
-title = {Measuring azimuthal and radial modes of photons},
-volume = {26},
-month = {Nov},
-year = {2018},
-url = {http://opg.optica.org/oe/abstract.cfm?URI=oe-26-24-31925},
-doi = {10.1364/OE.26.031925}
 }
 
 @article{DHMPPV21,
@@ -3722,23 +3696,6 @@ location = {Chicago, Illinois, USA},
 series = {STOC '88}
 }
 
-@inproceedings{CCD88,
-author = {Chaum, David and Cr\'{e}peau, Claude and Damgard, Ivan},
-title = {Multiparty Unconditionally Secure Protocols},
-year = {1988},
-isbn = {0897912640},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/62212.62214},
-doi = {10.1145/62212.62214},
-abstract = {Under the assumption that each pair of participants can communicate secretly, we show that any reasonable multiparty protocol can be achieved if at least 2n/3 of the participants are honest. The secrecy achieved is unconditional. It does not rely on any assumption about computational intractability.},
-booktitle = {Proceedings of the Twentieth Annual ACM Symposium on Theory of Computing},
-pages = {11–19},
-numpages = {9},
-location = {Chicago, Illinois, USA},
-series = {STOC '88}
-}
-
 @inproceedings{PWM+20,
   doi = {10.1109/hpec43674.2020.9286159},
   url = {https://doi.org/10.1109/hpec43674.2020.9286159},
@@ -4082,6 +4039,527 @@ isbn="978-3-642-13190-5"
   author = {Charles Ci Wen Lim and Christopher Portmann and Marco Tomamichel and Renato Renner and Nicolas Gisin},
   title = {Device-Independent Quantum Key Distribution with Local Bell Test},
   journal = {Physical Review X}
+}
+
+@article{MDSFT13,
+author = {Müller-Lennert, Martin  and Dupuis, Frédéric  and Szehr, Oleg  and Fehr, Serge  and Tomamichel, Marco },
+title = {On quantum Rényi entropies: A new generalization and some properties},
+journal = {Journal of Mathematical Physics},
+volume = {54},
+number = {12},
+pages = {122203},
+year = {2013},
+doi = {10.1063/1.4838856},
+}
+
+@book{T16,
+  doi = {10.1007/978-3-319-21891-5},
+  year = {2016},
+  publisher = {Springer International Publishing},
+  author = {Marco Tomamichel},
+  title = {Quantum Information Processing with Finite Resources}
+}
+
+@inproceedings{CCD88,
+author = {Chaum, David and Cr\'{e}peau, Claude and Damgard, Ivan},
+title = {Multiparty Unconditionally Secure Protocols},
+year = {1988},
+isbn = {0897912640},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+doi = {10.1145/62212.62214},
+booktitle = {Proceedings of the Twentieth Annual ACM Symposium on Theory of Computing},
+pages = {11–19},
+numpages = {9},
+location = {Chicago, Illinois, USA},
+series = {STOC '88}
+}
+
+@article{Canetti00MPC,
+  doi = {10.1007/s001459910006},
+  year = {2000},
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {13},
+  number = {1},
+  pages = {143--202},
+  author = {Ran Canetti},
+  title = {Security and Composition of Multiparty Cryptographic Protocols},
+  journal = {Journal of Cryptology}
+}
+
+@article{C94,
+author = { Claude   Crépeau },
+title = {Quantum Oblivious Transfer},
+journal = {Journal of Modern Optics},
+volume = {41},
+number = {12},
+pages = {2445-2454},
+year  = {1994},
+publisher = {Taylor & Francis},
+doi = {10.1080/09500349414552291},
+}
+
+@article{NP06,
+  doi = {10.1137/s0097539704383633},
+  year = {2006},
+  month = jan,
+  publisher = {Society for Industrial {\&} Applied Mathematics ({SIAM})},
+  volume = {35},
+  number = {5},
+  pages = {1254--1281},
+  author = {Moni Naor and Benny Pinkas},
+  title = {Oblivious Polynomial Evaluation},
+  journal = {{SIAM} Journal on Computing}
+}
+
+@inproceedings{NP99,
+  doi = {10.1145/301250.301312},
+  year = {1999},
+  publisher = {{ACM} Press},
+  author = {Moni Naor and Benny Pinkas},
+  title = {Oblivious transfer and polynomial evaluation},
+  booktitle = {Proceedings of the thirty-first annual {ACM} symposium on Theory of computing  - {STOC} {\textquotesingle}99}
+}
+
+
+@article{LP02,
+  doi = {10.1007/s00145-001-0019-2},
+  year = {2002},
+  month = jun,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {15},
+  number = {3},
+  pages = {177--206},
+  author = {Lindell and  Pinkas},
+  title = {Privacy Preserving Data Mining},
+  journal = {Journal of Cryptology}
+}
+
+@incollection{G99,
+  doi = {10.1007/3-540-48405-1\_8},
+  year = {1999},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {116--129},
+  author = {Niv Gilboa},
+  title = {Two Party {RSA} Key Generation},
+  booktitle = {Advances in Cryptology {\textemdash} {CRYPTO}' 99}
+}
+
+@article{H18,
+author = {Hazay, Carmit},
+title = {Oblivious Polynomial Evaluation and Secure Set-Intersection from Algebraic PRFs},
+year = {2018},
+issue_date = {April 2018},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg},
+volume = {31},
+number = {2},
+issn = {0933-2790},
+doi = {10.1007/s00145-017-9263-y},
+journal = {J. Cryptol.},
+month = {apr},
+pages = {537–586},
+numpages = {50},
+keywords = {Efficient secure computation, Secure set-intersection, Committed oblivious PRF, Oblivious polynomial evaluation}
+}
+
+@article{CBKG02,
+  title = {Security of Quantum Key Distribution Using $\mathit{d}$-Level Systems},
+  author = {Cerf, Nicolas J. and Bourennane, Mohamed and Karlsson, Anders and Gisin, Nicolas},
+  journal = {Phys. Rev. Lett.},
+  volume = {88},
+  issue = {12},
+  pages = {127902},
+  numpages = {4},
+  year = {2002},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.88.127902}
+}
+
+@article{BHVBFHM18,
+author = {Fr\'{e}d\'{e}ric Bouchard and Natalia Herrera Valencia and Florian Brandt and Robert Fickler and Marcus Huber and Mehul Malik},
+journal = {Opt. Express},
+keywords = {Light beams; Phase modulation; Phase plates; Photon polarization; Quantum communications; Quantum information processing},
+number = {24},
+pages = {31925--31941},
+publisher = {OSA},
+title = {Measuring azimuthal and radial modes of photons},
+volume = {26},
+month = {Nov},
+year = {2018},
+doi = {10.1364/OE.26.031925}
+}
+
+@article{AGS03,
+author = {Acin, Antonio and Gisin, Nicolas and Scarani, Valerio},
+title = {Security Bounds in Quantum Cryptography Using D-Level Systems},
+year = {2003},
+issue_date = {November 2003},
+publisher = {Rinton Press, Incorporated},
+address = {Paramus, NJ},
+volume = {3},
+number = {6},
+issn = {1533-7146},
+abstract = {We analyze the security of quantum cryptography schemes for d-level systems using 2 or d + 1 maximally conjugated bases, under individual eavesdropping attacks based on cloning machines and measurement after the basis reconciliation. We consider classical advantage distillation protocols, that allow to extract a key even in situations where the mutual information between the honest parties is smaller than the eavesdropper's information. In this scenario, advantage distillation protocols are shown to be as powerful as quantum distillation: key distillation is possible using classical techniques if and only if the corresponding state in the entanglement based protocol is distillable.},
+journal = {Quantum Info. Comput.},
+month = {nov},
+pages = {563–580},
+numpages = {18},
+keywords = {quantum distillation, key distillation, quantum cryptography}
+}
+
+@article{SS10,
+  title = {Security proof for quantum key distribution using qudit systems},
+  author = {Sheridan, Lana and Scarani, Valerio},
+  journal = {Phys. Rev. A},
+  volume = {82},
+  issue = {3},
+  pages = {030301},
+  numpages = {4},
+  year = {2010},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.82.030301}
+}
+
+@article{AKBH07,
+  title = {Large-Alphabet Quantum Key Distribution Using Energy-Time Entangled Bipartite States},
+  author = {Ali-Khan, Irfan and Broadbent, Curtis J. and Howell, John C.},
+  journal = {Phys. Rev. Lett.},
+  volume = {98},
+  issue = {6},
+  pages = {060503},
+  numpages = {4},
+  year = {2007},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.98.060503}
+}
+
+@article{Zhongetal2015,
+  doi = {10.1088/1367-2630/17/2/022002},
+  year = {2015},
+  publisher = {{IOP} Publishing},
+  volume = {17},
+  number = {2},
+  pages = {022002},
+  author = {Tian Zhong and Hongchao Zhou and Robert D Horansky and Catherine Lee and Varun B Verma and Adriana E Lita and Alessandro Restelli and Joshua C Bienfang and Richard P Mirin and Thomas Gerrits and Sae Woo Nam and Francesco Marsili and Matthew D Shaw and Zheshen Zhang and Ligong Wang and Dirk Englund and Gregory W Wornell and Jeffrey H Shapiro and Franco N C Wong},
+  title = {Photon-efficient quantum key distribution using time{\textendash}energy entanglement with high-dimensional encoding},
+  journal = {New Journal of Physics}
+}
+
+
+@article{Sitetal17,
+author = {Alicia Sit and Fr\'{e}d\'{e}ric Bouchard and Robert Fickler and J\'{e}r\'{e}mie Gagnon-Bischoff and Hugo Larocque and Khabat Heshami and Dominique Elser and Christian Peuntinger and Kevin G\"{u}nthner and Bettina Heim and Christoph Marquardt and Gerd Leuchs and Robert W. Boyd and Ebrahim Karimi},
+journal = {Optica},
+keywords = {Free-space optical communication; Optical vortices ; Quantum cryptography ; Entanglement distribution; Liquid crystal devices; Quantum communications; Quantum cryptography; Quantum key distribution; Vector beams},
+number = {9},
+pages = {1006--1010},
+publisher = {OSA},
+title = {High-dimensional intracity quantum cryptography with structured photons},
+volume = {4},
+year = {2017},
+doi = {10.1364/OPTICA.4.001006}
+}
+
+@article{Bouchardetal18,
+  doi = {10.22331/q-2018-12-04-111},
+  title = {Experimental investigation of high-dimensional quantum key distribution protocols with twisted photons},
+  author = {Bouchard, Fr{\'{e}}d{\'{e}}ric and Heshami, Khabat and England, Duncan and Fickler, Robert and Boyd, Robert W. and Englert, Berthold-Georg and S{\'{a}}nchez-Soto, Luis L. and Karimi, Ebrahim},
+  journal = {{Quantum}},
+  issn = {2521-327X},
+  publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}},
+  volume = {2},
+  pages = {111},
+  year = {2018}
+}
+
+@book{Goldreichbook04,
+  doi = {10.1017/cbo9780511721656},
+  year = {2004},
+  month = may,
+  publisher = {Cambridge University Press},
+  author = {Oded Goldreich},
+  title = {Foundations of Cryptography}
+}
+
+@InProceedings{DHNO19,
+author="Damg{\aa}rd, Ivan
+and Haagh, Helene
+and Nielsen, Michael
+and Orlandi, Claudio",
+title="Commodity-Based 2PC for Arithmetic Circuits",
+booktitle="Cryptography and Coding",
+year="2019",
+publisher="Springer International Publishing",
+pages="154--177",
+isbn="978-3-030-35199-1"
+}
+
+@article{M05,
+  title = {Large family of quantum weak coin-flipping protocols},
+  author = {Mochon, Carlos},
+  journal = {Phys. Rev. A},
+  volume = {72},
+  issue = {2},
+  pages = {022341},
+  numpages = {16},
+  year = {2005},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.72.022341}
+}
+
+@article{MTVUZ05,
+  title = {Experimental Quantum Coin Tossing},
+  author = {Molina-Terriza, G. and Vaziri, A. and Ursin, R. and Zeilinger, A.},
+  journal = {Phys. Rev. Lett.},
+  volume = {94},
+  issue = {4},
+  pages = {040501},
+  numpages = {4},
+  year = {2005},
+  month = {Jan},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.94.040501}
+}
+
+@inproceedings{ARW19,
+author = {Arora, Atul Singh and Roland, J\'{e}r\'{e}mie and Weis, Stephan},
+title = {Quantum Weak Coin Flipping},
+year = {2019},
+isbn = {9781450367059},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+doi = {10.1145/3313276.3316306},
+booktitle = {Proceedings of the 51st Annual ACM SIGACT Symposium on Theory of Computing},
+pages = {205–216},
+numpages = {12},
+location = {Phoenix, AZ, USA},
+series = {STOC 2019}
+}
+
+@inproceedings{ARV21,
+author = {Arora, Atul Singh and Roland, J\'{e}r\'{e}mie and Vlachou, Chrysoula},
+title = {Analytic Quantum Weak Coin Flipping Protocols with Arbitrarily Small Bias},
+year = {2021},
+isbn = {9781611976465},
+publisher = {Society for Industrial and Applied Mathematics},
+booktitle = {Proceedings of the Thirty-Second Annual ACM-SIAM Symposium on Discrete Algorithms},
+pages = {919–938},
+numpages = {20},
+series = {SODA '21}
+}
+
+@article{BBBG09,
+  title = {Fair loss-tolerant quantum coin flipping},
+  author = {Berl\'{\i}n, Guido and Brassard, Gilles and Bussi\`eres, F\'elix and Godbout, Nicolas},
+  journal = {Phys. Rev. A},
+  volume = {80},
+  issue = {6},
+  pages = {062321},
+  numpages = {11},
+  year = {2009},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.80.062321}
+}
+
+@article{PJLCLTKD14,
+	author = {Pappa, Anna and Jouguet, Paul and Lawson, Thomas and Chailloux, Andr{\'e} and Legr{\'e}, Matthieu and Trinkler, Patrick and Kerenidis, Iordanis and Diamanti, Eleni},
+	date = {2014/04/24},
+	date-added = {2022-10-24 12:58:14 +0100},
+	date-modified = {2022-10-24 12:58:14 +0100},
+	doi = {10.1038/ncomms4717},
+	id = {Pappa2014},
+	isbn = {2041-1723},
+	journal = {Nature Communications},
+	number = {1},
+	pages = {3717},
+	title = {Experimental plug and play quantum coin flipping},
+	volume = {5},
+	year = {2014}}
+
+
+
+@article{BBBGST11,
+	author = {Berl{\'\i}n, Guido and Brassard, Gilles and Bussi{\`e}res, F{\'e}lix and Godbout, Nicolas and Slater, Joshua A. and Tittel, Wolfgang},
+	date = {2011/11/29},
+	date-added = {2022-10-24 12:59:52 +0100},
+	date-modified = {2022-10-24 12:59:52 +0100},
+	doi = {10.1038/ncomms1572},
+	id = {Berl{\'\i}n2011},
+	isbn = {2041-1723},
+	journal = {Nature Communications},
+	number = {1},
+	pages = {561},
+	title = {Experimental loss-tolerant quantum coin flipping},
+	volume = {2},
+	year = {2011}}
+
+
+@article{DV12,
+	author = {Danan, Ariel and Vaidman, Lev},
+	date = {2012/06/01},
+	date-added = {2022-10-24 13:06:31 +0100},
+	date-modified = {2022-10-24 13:06:31 +0100},
+	doi = {10.1007/s11128-011-0284-4},
+	id = {Danan2012},
+	isbn = {1573-1332},
+	journal = {Quantum Information Processing},
+	number = {3},
+	pages = {769--775},
+	title = {Practical quantum bit commitment protocol},
+	volume = {11},
+	year = {2012}}
+
+
+@article{SY20,
+	author = {Song, Yaqi and Yang, Li},
+	date = {2020/04/16},
+	date-added = {2022-10-24 13:03:55 +0100},
+	date-modified = {2022-10-24 13:03:55 +0100},
+	doi = {10.1038/s41598-020-62893-0},
+	id = {Song2020},
+	isbn = {2045-2322},
+	journal = {Scientific Reports},
+	number = {1},
+	pages = {6531},
+	title = {Semi-Counterfactual Quantum Bit Commitment Protocol},
+	volume = {10},
+	year = {2020}
+}
+
+@article{SG12,
+	author = {S. {Arash Sheikholeslam} and T. {Aaron Gulliver}},
+	doi = {https://doi.org/10.1016/j.rinp.2012.07.002},
+	issn = {2211-3797},
+	journal = {Results in Physics},
+	keywords = {Quantum bit commitment, Quantum cryptography, EPR attack},
+	pages = {97-99},
+	title = {A practical quantum bit commitment protocol},
+	volume = {2},
+	year = {2012}
+}
+
+@article{NJCKW12,
+	author = {Ng, Nelly Huei Ying and Joshi, Siddarth K. and Chen Ming, Chia and Kurtsiefer, Christian and Wehner, Stephanie},
+	date = {2012/12/27},
+	date-added = {2022-10-24 13:05:13 +0100},
+	date-modified = {2022-10-24 13:05:13 +0100},
+	doi = {10.1038/ncomms2268},
+	id = {Ng2012},
+	isbn = {2041-1723},
+	journal = {Nature Communications},
+	number = {1},
+	pages = {1326},
+	title = {Experimental implementation of bit commitment in the noisy-storage model},
+	volume = {3},
+	year = {2012}}
+
+@article{LAAPMP14,
+  title = {Noise and measurement errors in a practical two-state quantum bit commitment protocol},
+  author = {Loura, Ricardo and Almeida, \'Alvaro J. and Andr\'e, Paulo S. and Pinto, Armando N. and Mateus, Paulo and Paunkovi\ifmmode \acute{c}\else \'{c}\fi{}, Nikola},
+  journal = {Phys. Rev. A},
+  volume = {89},
+  issue = {5},
+  pages = {052336},
+  numpages = {15},
+  year = {2014},
+  month = {May},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.89.052336}
+}
+
+@article{LAPPP16,
+  title = {Security of two-state and four-state practical quantum bit-commitment protocols},
+  author = {Loura, Ricardo and Arsenovi\ifmmode \acute{c}\else \'{c}\fi{}, D. and Paunkovi\ifmmode \acute{c}\else \'{c}\fi{}, Nikola and Popovi\ifmmode \acute{c}\else \'{c}\fi{}, D. B. and Prvanovi\ifmmode \acute{c}\else \'{c}\fi{}, Slobodan},
+  journal = {Phys. Rev. A},
+  volume = {94},
+  issue = {6},
+  pages = {062335},
+  numpages = {11},
+  year = {2016},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.94.062335}
+}
+
+@INPROCEEDINGS {KC13,
+author = {I. Kerenidis and A. Chailloux},
+booktitle = {2013 IEEE 54th Annual Symposium on Foundations of Computer Science},
+title = {Optimal Bounds for Quantum Bit Commitment},
+year = {2011},
+volume = {},
+issn = {0272-5428},
+pages = {354-362},
+doi = {10.1109/FOCS.2011.42},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+month = {oct}
+}
+
+@article{BCKD20,
+  title = {Quantum weak coin flipping with a single photon},
+  author = {Bozzio, Mathieu and Chabaud, Ulysse and Kerenidis, Iordanis and Diamanti, Eleni},
+  journal = {Phys. Rev. A},
+  volume = {102},
+  issue = {2},
+  pages = {022414},
+  numpages = {15},
+  year = {2020},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevA.102.022414}
+}
+
+@article{BCDP21,
+  title = {Multiphoton and Side-Channel Attacks in Mistrustful Quantum Cryptography},
+  author = {Bozzio, Mathieu and Cavaill\`es, Adrien and Diamanti, Eleni and Kent, Adrian and Pital\'ua-Garc\'{\i}a, Dami\'an},
+  journal = {PRX Quantum},
+  volume = {2},
+  issue = {3},
+  pages = {030338},
+  numpages = {54},
+  year = {2021},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PRXQuantum.2.030338}
+}
+
+@article{CZK18,
+  doi = {10.1038/s41598-018-32838-9},
+  year = {2018},
+  month = oct,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {8},
+  number = {1},
+  author = {Yao-Hsin Chou and Guo-Jyun Zeng and Shu-Yu Kuo},
+  title = {One-out-of-two Quantum Oblivious Transfer based on Nonorthogonal States},
+  journal = {Scientific Reports}
+}
+
+@article{ASRP21,
+  doi = {10.1103/prxquantum.2.010335},
+  year = {2021},
+  month = mar,
+  publisher = {American Physical Society ({APS})},
+  volume = {2},
+  number = {1},
+  author = {Ryan Amiri and Robert St{\'{a}}rek and David Reichmuth and Ittoop V. Puthoor and Michal Mi{\v{c}}uda and Ladislav Mi{\v{s}}ta,  Jr. and Miloslav Du{\v{s}}ek and Petros Wallden and Erika Andersson},
+  title = {Imperfect 1-Out-of-2 Quantum Oblivious Transfer: Bounds,  a Protocol,  and its Experimental Implementation},
+  journal = {{PRX} Quantum}
+}
+
+@article{KST21,
+      title={A device-independent protocol for XOR oblivious transfer}, 
+      author={Srijita Kundu and Jamie Sikora and Ernest Y. -Z. Tan},
+      year={2022},
+      journal={Quantum},
+      volume={6},
+      pages={735},
+      doi={10.22331/q-2022-05-30-725}
 }
 
 
