Abstract and Resumo finished

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,14 @@
 
 \chapter*{Abstract}
 \addcontentsline{toc}{section}{Abstract}
-\noindent Start with no indent.
 
-Then you can write another paragraph.
+Quantum cryptography is the field of cryptography that explores the quantum properties of matter. Generally, it aims to develop primitives beyond the reach of classical cryptography and to improve existing classical implementations. Although much of the work in this field covers quantum key distribution (QKD), there have been some crucial steps toward the understanding and development of other two-party primitives, such as quantum oblivious transfer (QOT). One can show the similarity between the application structure of both QKD and QOT primitives. Just as QKD protocols allow quantum-safe communication, QOT protocols allow quantum-safe computation. However, the conditions under which QOT is fully quantum-safe have been subject to intense scrutiny and study. In this thesis, we start by surveying the work developed around the concept of oblivious transfer within theoretical quantum cryptography. We focus on some proposed protocols and their security requirements. We review the impossibility results that daunt this primitive and discuss several quantum security models under which it is possible to prove QOT security. 
+
+The most famous application of OT lies in the realm of secure multiparty computation (SMC). This technology has the potential to be disruptive in the fields of data analysis and computation. It enables several parties to compute virtually any function while preserving the privacy of their inputs. However, most of its protocols’ security and efficiency relies on the security and efficiency of OT. For this reason, we make a detailed comparison between the complexity of quantum oblivious transfer based on oblivious keys and two of the fastest classical OT protocols.
+
+Following the theoretical comparison between quantum and classical OT, we integrate and compare both approaches within an SMC system based on genomic data. In summary, we propose a feasible SMC system assisted with quantum cryptographic protocols that is designed to compute a phylogenetic tree from a set of private genome sequences. This system significantly improves the privacy and security of the computation thanks to three quantum cryptographic protocols that provide enhanced security against quantum computer attacks. This system adapts several distance-based methods (Unweighted Pair Group Method with Arithmetic mean, Neighbour-Joining, Fitch-Margoliash) into a private setting where the sequences owned by each party are not disclosed to the other members present in the protocol. We theoretically evaluate the performance and privacy guarantees of the system through a complexity analysis and security proof and give an extensive explanation of the implementation details and cryptographic protocols. We also implement a quantum-assisted secure phylogenetic tree computation based on the Libscapi implementation of the Yao, the PHYLIP library, and simulated keys of two quantum systems: quantum oblivious key distribution and quantum key distribution. We benchmark this implementation against a classical-only solution and we conclude that both approaches render similar execution times, the only difference being the time overhead taken by the oblivious key management system of the quantum-assisted approach.
+
+Finally, we present the first quantum protocol for oblivious linear evaluation. Oblivious linear evaluation is a generalization of oblivious transfer, whereby two distrustful parties obliviously compute a linear function, $f(x) = ax + b$, i.e., each one provides their inputs that remain  unknown to the other, in order to compute the output $f(x)$ that becomes known to only one of them. From both a structural and a security point-of-view, oblivious linear evaluation is fundamental for arithmetic-based secure multi-party computation protocols. In the classical case, it is known that oblivious linear evaluation can be generated based on oblivious transfer, and quantum counterparts of these protocols can, in principle, be constructed as straightforward extensions based on quantum oblivious transfer. Here, we present the first, to the best of our knowledge, quantum protocol for oblivious linear evaluation that, furthermore, does not rely on quantum oblivious transfer. We start by presenting a semi-honest protocol and then we extend it to the dishonest setting employing a \textit{commit-and-open} strategy. Our protocol uses high-dimensional quantum states to obliviously compute the linear function,  $f(x)$, on Galois Fields of prime dimension, $GF(d) \cong \mathbb{Z}_d$, or prime-power dimension, $GF(d^M)$. These constructions utilize the existence of a complete set of mutually unbiased bases in prime-power dimension Hilbert spaces and their linear behaviour upon the Heisenberg-Weyl operators.  We also generalize our protocol to achieve vector oblivious linear evaluation, where several instances of oblivious linear evaluation are generated, thus making the protocol more efficient. We prove the protocols to have static security in the framework of quantum universal composability.
 
 \vfill
 
